--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+pandas>=2.2.2
+numpy>=1.26.4
 ortools>=9.11.4210
 z3-solver>=4.12.2.0
 jpype1>=1.5.1
 customtkinter>=5.2.2
 CTkTable>=1.1
+seaborn>=0.13.2
+matplotlib>=3.9.2
