--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 pandas>=2.2.2
 numpy>=1.26.4
-jpype1>=1.5.1
 customtkinter>=5.2.2
 CTkTable>=1.1
 seaborn>=0.13.2
@@ -12,3 +11,4 @@ z3-solver>=4.12.2.0
 gurobipy>=12.0.0
 pulp>=2.9.0
 deap>=1.4.1
+jpype1>=1.5.1  # for SAT4J
